# borg-ui

./: .gitignore  AGENTS.md  Cargo.toml  DESIGN.md  HANDOFF.md  README.md  TODO.md
.claude/PRPs/plans/: fix-vss-paths-in-archive.plan.md  fix-windows-local-repo-path.plan.md  windows-gui-validation.plan.md
.claude/PRPs/plans/completed/: friendlier-non-admin-preflight.plan.md  windows-nonadmin-multidrive-validation.plan.md
.claude/PRPs/reports/: windows-nonadmin-preflight-and-validation-report.md
.claude/PRPs/reviews/: pr-33-review.md  pr-44-review.md
.github/workflows/: ci.yml  release.yml
app-tauri/: AGENTS.md  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
app-tauri/src/: AGENTS.md  app.css  app.html
app-tauri/src-tauri/: AGENTS.md  Cargo.toml  tauri.conf.json  tauri.windows.conf.json
app-tauri/src-tauri/capabilities/: default.json
app-tauri/src-tauri/icons/: icon.icns
app-tauri/src-tauri/src/: archive_naming.rs  commands.rs  diagnostics.rs  history.rs  keychain.rs  lib.rs  logging.rs  main.rs  network.rs  profiles.rs  recovery.rs  redaction.rs  scheduled.rs  tray.rs
app-tauri/src/lib/: AGENTS.md  archive-tree.ts  format.ts
app-tauri/src/lib/components/: ArchiveBrowser.svelte  DiffViewer.svelte  FieldHelp.svelte
app-tauri/src/lib/components/settings/: ArchiveNamingSection.svelte  CommandsSection.svelte  DiagnosticsSection.svelte  IntegritySection.svelte  NotificationsSection.svelte  ProfilesSection.svelte  RecoverySection.svelte  RetentionSection.svelte  ScheduleSection.svelte  StartupSection.svelte  UpdateSection.svelte
app-tauri/src/lib/stores/: history.svelte.ts  notifications.svelte.ts  profiles.svelte.ts  repo.svelte.ts  repo.ts  retention.svelte.ts  schedule.svelte.ts  update.svelte.ts
app-tauri/src/routes/: +layout.svelte  +page.svelte  AGENTS.md
app-tauri/src/routes/archives/: +page.svelte
app-tauri/src/routes/backup/: +page.svelte
app-tauri/src/routes/settings/: +page.svelte
app-tauri/src/routes/setup/: +page.svelte
crates/: AGENTS.md
crates/borg-core/: AGENTS.md  Cargo.toml
crates/borg-core/src/: archive.rs  borg.rs  config.rs  error.rs  hooks.rs  lib.rs  proc.rs  progress.rs  ssh.rs
crates/borg-core/tests/: config_persistence.rs  e2e_backup_restore.rs  validation_pipeline.rs
crates/borg-platform-win/: AGENTS.md  Cargo.toml
crates/borg-platform-win/src/: autostart.rs  lib.rs  scheduler.rs  vss.rs
docs/: windows-signing.md
scripts/: test-signing-config.ps1  validate-signing-config.ps1  verify-authenticode.ps1
tests/smoke-windows/: .gitignore  Makefile  README.md  ci.yml  docker-compose.yml  run.sh  smoke-test.ps1  validate-archive-smoke.ps1  validate-autostart-login.ps1  validate-edge.ps1  validate-gui-flows.ps1  validate-gui.ps1  validate-installer.ps1  validate-tray.ps1  validate-updater.ps1  validate-vss-manual.ps1  validate-vss-spike.ps1  validate-vss.ps1  validate.ps1
tests/smoke-windows/oem/: install.bat
