[workspace]
resolver = "2"
members = [
    "crates/borg-core",
    "crates/borg-platform-win",
    "app-tauri/src-tauri",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/borgui/borg-ui"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
