[package]
name = "borg-ui"
version.workspace = true
edition.workspace = true

[lib]
name = "borg_ui_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
borg-core = { path = "../../crates/borg-core" }
borg-platform-win = { path = "../../crates/borg-platform-win" }
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
chrono = "0.4"
hostname = "0.4"
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
rusqlite = { version = "0.37", features = ["bundled"] }
regex = "1"
zip = { version = "4", default-features = false, features = ["deflate"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_Storage_FileSystem"] }

[dev-dependencies]
tempfile = "3"
