[package]
name = "borg-core"
version.workspace = true
edition.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
ssh-key = { version = "0.6", default-features = false, features = ["std", "ed25519"] }
rand_core = { version = "0.6", features = ["getrandom"] }

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true }
