[package]
name = "borg-platform-win"
version.workspace = true
edition.workspace = true

[dependencies]
borg-core = { path = "../borg-core" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
thiserror.workspace = true

[target.'cfg(windows)'.dependencies]
